# Multilayer-perceptron-implementation

./: .gitignore  CMakeLists.txt  LastDance  LastDance2  myTorch  readme.md  test.txt  train.sh
src/: main.cpp  neuralNetwork.cpp  neuralNetwork.hpp  parser.cpp  parser.hpp
